styling: add FE and remove reduntdant css (#39)

--- a/TaskManager/web/index.html
+++ b/TaskManager/web/index.html
@@ -11,5 +11,6 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
     </head>
     <body>
         <div>TODO write content</div>
+        <a href="login">login</a>
     </body>
 </html>
